# 2D-Spacecraft

./: .gitignore  Cargo.toml  README.md  gui.js  gui_bg.wasm  index.html
.github/workflows/: pages.yml
control/: control.py  imu.py
data/: MPU6000_stationary_down.csv  MPU6000_stationary_up.csv
flight-controller/: Cargo.toml  build.rs
flight-controller/.cargo/: config.toml
flight-controller/src/: battery_monitor.rs  imu.rs  logger.rs  main.rs  motor.rs  state.rs
gui/: Cargo.toml  index.html
gui/src/: dynamics.rs  main.rs
hardware/cad/: SC2D.FCStd
hardware/pcb/: .gitignore
hardware/pcb/rcs/: custom.kicad_sym  freerouting.rules  rcs.kicad_pcb  rcs.kicad_pro  rcs.kicad_sch
hardware/pcb/rcs/custom.pretty/: ESP32.kicad_mod
messages/: Cargo.toml
messages/src/: lib.rs
notebooks/: casadi_test.py  control.py  control_casadi.py  control_casadi_time_varying.py  control_control.py  control_scipy.py  pyproject.toml
notes/: flashing.md
rcs-controller/: Cargo.toml
rcs-controller/.cargo/: config.toml
rcs-controller/src/: control.rs  main.rs  messaging.rs  wifi.rs
tracking/: .gitignore  calibrate.py  camera.py  main.py  pyproject.toml
