[package]
edition = "2024"
name = "flight-controller"
version = "0.1.0"
authors = ["Graicc <33105645+Graicc@users.noreply.github.com>"]
resolver = "2"

[[bin]]
name = "flight-controller"
test = false
bench = false

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "log",
    "executor-interrupt",
] }
embassy-sync = "0.7"
embassy-time = { version = "0.5", features = ["log"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.4", features = [
    "log",
    "stm32f405rg",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-usb-logger = "0.5.1"
log = "0.4.28"
embassy-usb = "0.5.1"
embassy-futures = "0.1.2"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
