[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30"
log = "0.4"
nalgebra = "0.33.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
