[package]
edition = "2024"
name = "rcs-controller"
version = "0.1.0"

[[bin]]
name = "rcs-controller"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.9" }
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.17.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32"] }
esp-println = { version = "0.15.0", features = ["esp32"] }
static_cell = { version = "2.1.1", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
