[package]
edition = "2021"
name = "rcs-controller"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }

critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-rtos = { version = "0.2.0", features = ["defmt", "esp32", "embassy"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
static_cell = "2.1.1"
messages = { path = "../messages" }
embassy-sync = "0.7.2"
nalgebra = { version = "0.34.1", default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
